--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "14.1.0",
     "next-themes": "^0.2.1",
     "react": "^18",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7"
